feat: add /librarian profile and update test
